[wcag] Fix contrast issues on activity pages

--- a/ckanext/nhm/theme/less/nhm.less
+++ b/ckanext/nhm/theme/less/nhm.less
@@ -2888,6 +2888,10 @@ select, .select2-choice {
 
 .activity {
   margin-top: 30px;
+
+  .item .date {
+    color: @grey4;
+  }
 }
 
 [data-module="dashboard"] {
